syntax = "proto3";

option go_package = "go-web-template/api/http/app;app";

package http.app;

import "google/api/annotations.proto";
import "custom/common/authz.proto";


service AdminServer {
  rpc Login(AdminLoginRequest) returns (AdminLoginResponse) {
    option (google.api.http) = {
      post: "/admin/login"
    };
    option (custom.common.auth) = {
      role: ANONYMOUS
    };
  }
  rpc AddToken(AdminAddTokenRequest) returns (AdminAddTokenResponse) {
    option (google.api.http) = {
      post: "/admin/add_token"
    };
    option (custom.common.auth) = {
      role: ADMIN
      type: WEB
    };
  }
  rpc UploadImage(AdminUploadImageRequest) returns (AdminUploadImageResponse) {
    option (google.api.http) = {
      post: "/admin/upload/image"
    };
    option (custom.common.auth) = {
      role: ADMIN
      type: WEB
    };
  }
}

message AdminLoginRequest {
  // @inject_tag: bind:"form,name=username" validate:"required,non_blank,min_len=2,pattern=#abc123"
  string username = 1;
  // @inject_tag: bind:"form,name=password" validate:"required,non_blank,min_len=4"
  string password = 2;
}

message AdminLoginResponse {
}


message AdminAddTokenRequest {
  // @inject_tag: bind:"form,name=userid" validate="required,gt=0"
  int64 userid = 1;
  // @inject_tag: bind:"form,name=expire" validate="required,gt=0" default:"60"
  int32 expire = 2; // expire time in days
}

message AdminAddTokenResponse {
  string access_token = 1;
}

message AdminUploadImageRequest {
  // @inject_tag: bind:"file,name=file" validate:"required,min_len=1"
  bytes file = 1;
  // @inject_tag: bind:"form,name=key"
  string key = 2;
}

message AdminUploadImageResponse {
  string key = 1;
}

